# komodo

./: LICENSE  README.md  startup.md
komodo2/: .xprofile  CMakeLists.txt  package.xml  setup.sh
komodo2/launch/: komodo2.launch  komodo2_old.launch
komodo2/rules/: 49-teensy.rules  99-realsense-libusb.rules  bms_battery.rules  hokuyo.rules  microsoft_webcam.rules  roboteq.rules
komodo2/third_party_files/: ros-kinetic-ric-interface_0.0.0-0xenial_amd64.deb
komodo2/third_party_files/docs/: How to install Mimo Monitors on Ubuntu 14.04 and newer.html
komodo2_control/: CMakeLists.txt  package.xml
komodo2_control/config/: komodo2_control.yaml
komodo2_control/launch/: komodo2_controllers.launch
komodo2_controllers/: CMakeLists.txt  package.xml  ros_control_plugins.xml
komodo2_controllers/include/komodo2_controllers/: diff_drive_controller.h  hardware_interface_adapter.h  odometry.h  robot.h  speed_limiter.h  utils.h
komodo2_controllers/launch/: run_controllers.launch
komodo2_controllers/src/: run_controller.cpp
komodo2_controllers/src/komodo2_controllers/: diff_drive_controller.cpp  odometry.cpp  robot.cpp  speed_limiter.cpp  utils.cpp
komodo2_description/: CMakeLists.txt  package.xml
komodo2_description/config/: robot_state_pub.rviz
komodo2_description/launch/: rviz_state_pub.launch
komodo2_description/mesh/: base.STL  wheel.STL
komodo2_description/urdf/: komodo2.xacro  komodo2_gazebo.xacro  komodo2_old.xacro
komodo2_gazebo/: CMakeLists.txt  package.xml
komodo2_gazebo/macros/: asus_xiton_pro_live_depth_cam.xacro  camera.xacro  gps.xacro  hokuyo.xacro  imu.xacro  urf.xacro
komodo2_gazebo/worlds/: home.world  objects_on_table.world  wow1.world
komodo2_hw/: CMakeLists.txt  package.xml
komodo2_hw/include/: battery_pub.h  komodo2_hw.h  ricboard_pub.h  roboteq_diff_drive.h
komodo2_hw/launch/: komodo2_hw.launch
komodo2_hw/src/: battery_pub.cpp  komodo2_hw.cpp  komodo2_hw_node.cpp  ricboard_pub.cpp  roboteq_diff_drive.cpp
komodo2_navigation/: CMakeLists.txt  package.xml
komodo2_navigation/config/: costmap_common_params.yaml  costmap_exploration.yaml  global_costmap_params.yaml  local_costmap_params.yaml  robot_localization.yaml
komodo2_navigation/launch/: amcl.launch  gmapping.launch  hector_slam.launch  move_base.launch  robot_localization.launch  rtabmap.launch
komodo2_navigation/maps/: home.pgm  object_on_table.pgm  object_on_table.yaml  room.pgm  room.yaml
komodo2_navigation/rviz/: amcl.rviz  hector_slam.rviz
komodo2_navigation/src/: nav.py
komodo2_perception/: CMakeLists.txt  setup.py
komodo2_perception/config/: perception.rviz
komodo2_perception/launch/: perception.launch
komodo2_perception/scripts/: capture_features.py  object_recognition.py  test_osher.py
komodo2_perception/src/: feature_extractor.cpp
komodo2_perception/src/komodo_perception/: marker_tools.py  pcl_helper.py
komodo2_rl/: CMakeLists.txt  package.xml
komodo2_rl/src/: Spawner.py  a2c.py  data.npy  ddpg.py  env_check.py  eps_rewards.npy  komodo_act.py  komodo_env.py  komodo_env_befordce.py  komodo_env_new.py  komodo_gazebo_act.py  komodo_gazebo_act_a2c.py  komodo_learn.py  komodo_learn_a2c.py  komodo_manual_control.py  komodo_model.py  plot_eps_reward.py  torque_listener.py  utils.py
komodo2_rl/src/agents/: a2c.py  ddpg.py
komodo2_rl/src/data/: 8.npy  obs1.npy  obs2.npy  obs3.npy  obs4.npy  obs5.npy  obs6.npy  obs7.npy
komodo2_rl/src/environments/: Spawner.py  komodo_env.py  komodo_env_new.py
komodo2_rl/src/graphs/: events.out.tfevents.1577107124.osher  events.out.tfevents.1577122636.osher  events.out.tfevents.1577122863.osher  events.out.tfevents.1577187390.osher  events.out.tfevents.1577293985.osher  events.out.tfevents.1580813300.osher  events.out.tfevents.1580813462.osher  events.out.tfevents.1580815728.osher  events.out.tfevents.1580818889.osher  events.out.tfevents.1580820230.osher  events.out.tfevents.1580820247.osher  events.out.tfevents.1580820272.osher  events.out.tfevents.1580820831.osher  events.out.tfevents.1580822031.osher  events.out.tfevents.1580822057.osher  events.out.tfevents.1580823576.osher  events.out.tfevents.1580824929.osher  events.out.tfevents.1580824954.osher  events.out.tfevents.1580825984.osher  (+38 more)
komodo2_rl_gazebo/: CMakeLists.txt  package.xml
komodo2_rl_gazebo/src/: Spawner.py  action.npy  ang.npy  checks.py  ddpg.py  eps_rewards.npy  force_test.py  komodo_act.py  komodo_env.py  komodo_gazebo_act.py  komodo_learn.py  komodo_model.py  lin.npy  lin_sim.npy  observation.npy  ori_sim.npy  states.npy  test.py
komodo2_sim_interface/: CMakeLists.txt  komodo2_sim_plugins.xml  package.xml
komodo2_sim_interface/include/komodo2_sim_interface/: komodo2_sim_interface.h
komodo2_sim_interface/src/: komodo2_sim_interface.cpp
komodo2_teleop/: CMakeLists.txt  package.xml
komodo2_teleop/config/: config.yaml  joy_profiles.yaml
komodo2_teleop/include/komodo2_teleop/: armadillo_teleop.h  joy_profile.h
komodo2_teleop/launch/: komodo2_teleop.launch
komodo2_teleop/src/: armadillo_teleop.cpp  komodo2_teleop_node.cpp
komodo2_utils/bms_interface/: CMakeLists.txt  package.xml
komodo2_utils/bms_interface/example/: bms_example.cpp
komodo2_utils/bms_interface/include/bms_interface/: bms_interface.h
komodo2_utils/bms_interface/src/: bms_interface.cpp
komodo2_utils/espeak_ros/: .gitignore  CMakeLists.txt  README.md  package.xml
komodo2_utils/intel_d435/: CMakeLists.txt  package.xml
komodo2_utils/lidar_urg_node/: CMakeLists.txt  package.xml
komodo2_utils/lidar_urg_node/launch/: lidar.launch
komodo2_utils/ric_driver/: ricboard_v3.ino.hex
komodo2_utils/ros_twist_mux/: CMakeLists.txt  package.xml
komodo2_utils/ros_twist_mux/config/: twist_mux.yaml
komodo2_utils/ros_twist_mux/launch/: twist_mux.launch
komodo2_utils/usb_cams/: CMakeLists.txt  package.xml
komodo_perception/: CMakeLists.txt  package.xml
komodo_perception/launch/: perception.launch
komodo_perception/models/: Untitled Document
komodo_perception/scripts/: test_osher.py
komodo_perception/src/: cloud_transformer.cpp  feature_extractor.cpp
(+86 files in other folders)
