<?xml version="1.0"?>
<package format="2">
  <name>komodo2_control</name>
  <version>0.0.0</version>
  <description>The komodo2_control package</description>

  <maintainer email="support@robotican.net">RobotICan</maintainer>

  <license>MIT</license>  


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <exec_depend>controller_manager</exec_depend>
  
x



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
