<?xml version="1.0"?>
<package format="2">
    <name>komodo2_navigation</name>
    <version>0.0.0</version>
    <description>The komodo2_navigation package</description>
    
    <maintainer email="support@robotican.net">Elhay Rauper</maintainer>
    
    <url type="website">www.robotican.net</url>
    
    <license>MIT</license>  
 
    
    <buildtool_depend>catkin</buildtool_depend>
    
    
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        
    </export>
</package>
