<?xml version="1.0"?>
<package format="2">
    <name>komodo2_teleop</name>
    <version>0.0.0</version>
    <description>The komodo2_teleop package allow controlling robot with controller</description>
    
    <maintainer email="support@robotican.net">RobotICan</maintainer>
    
    <url type="website">www.robotican.net</url>
    
    <license>MIT</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>joy</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>moveit_ros_planning_interface</build_depend>
    
    <build_export_depend>joy</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    
    <exec_depend>joy</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>actionlib</exec_depend>
    
    
    
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        
    </export>
</package>
