<?xml version="1.0"?>
<package format="2">
    <name>bms_interface</name>
    <version>1.0.0</version>
    <description>
        bms package provide an easy interface to read and monitor bms battery. 
        for more details see protocol description attached to this package
    </description>
    
    <maintainer email="support@robotican.net">RobotICan</maintainer>
    
    <url type="website">www.robotican.net</url>
    
    <license>MIT</license>  
 
    
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    
    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <export>
    </export>
</package>
