<?xml version="1.0"?>
<package format="2">
  <name>lidar_urg_node</name>
  <version>0.0.0</version>
  <description>The lidar_urg_node package</description>


  <maintainer email="support@robotican.net">RobotICan</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
