<?xml version="1.0"?>
<package format="2">
    <name>ros_twist_mux</name>
    <version>0.0.0</version>
    <description>The ros_twist_mux package</description>
    
    <maintainer email="support@robotican.net">RobotICan</maintainer>
    <license>MIT</license>
    
    <buildtool_depend>catkin</buildtool_depend>
    
    <export>
        
    </export>
</package>
